# infraforge

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  docker-compose.yml
.claude/: CLAUDE.md
agent/: Dockerfile  README.md  pyproject.toml
agent/agent/: __init__.py  config.py  llm.py
agent/agent/adapters/stub/: stub_policy_store.py
agent/agent/api/: main.py
agent/agent/graph/: graph.py  state.py
agent/agent/graph/nodes/: confirm.py  context_fetch.py  cost_estimate.py  generate.py  intake.py  refine.py  submit.py  validate.py
agent/agent/ports/: policy_store_port.py
agent/agent/prompts/: generate_prompt.py  intake_prompt.py  refine_prompt.py
agent/agent/tools/: control_plane.py  cost_explorer.py  terraform_lint.py
agent/tests/: test_api.py  test_intake_node.py  test_submit_node.py
control-plane/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
control-plane/gradle/: libs.versions.toml
control-plane/src/main/resources/: application-aws.yml  application-local.yml  application.yml
control-plane/src/test/resources/: application-test.yml
docs/: architecture.md  running-locally.md
e2e/: README.md  conftest.py  pyproject.toml  run_e2e.sh
e2e/tests/: test_agent.py  test_control_plane.py  test_health.py  test_workflow.py
e2e/utils/: jwt.py  webhook.py
infra-modules/aws/api-gateway/: main.tf  variables.tf
infra-modules/aws/ecs-service/: main.tf  variables.tf
infra-modules/aws/rds-postgres/: main.tf  variables.tf
infra-modules/aws/s3-bucket/: main.tf  variables.tf
infra-modules/aws/vpc/: main.tf  variables.tf
infra-modules/azure/azure-sql/: main.tf  variables.tf
infra-modules/azure/container-app/: main.tf  variables.tf
infra-modules/gcp/cloud-run/: main.tf  variables.tf
infra-modules/gcp/cloud-sql/: main.tf  variables.tf
infra-modules/gcp/vpc/: main.tf  variables.tf
scripts/: localstack-init.sh
ui/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/src/: middleware.ts
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/requests/: page.tsx
ui/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  StatusCard.tsx
ui/src/components/requests/: RequestList.tsx  RequestTimeline.tsx
ui/src/hooks/: useChatSession.ts  useRequestStatus.ts
ui/src/lib/: auth.ts
(+66 files in other folders)
