[project]
name = "infraforge-agent"
version = "0.1.0"
description = "infraforge LangGraph chat agent — AI-powered infrastructure provisioning"
requires-python = ">=3.13"
dependencies = [
    # Agent framework
    "langgraph>=0.3.0",
    "langchain-aws>=0.2.0",          # Bedrock LLM + Knowledge Bases
    "langchain-core>=0.3.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # HTTP client (tool calls → Control Plane)
    "httpx>=0.28.0",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # AWS
    "boto3>=1.35.0",

    # Utilities
    "python-jose[cryptography]>=3.3.0",  # JWT validation
    "structlog>=24.4.0",                 # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
target-version = "py313"
line-length    = 100
src            = ["agent"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version         = "3.13"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
